# tpconv

./: .gitignore  .travis.yml  makefile  pyproject.toml
tests/: test_time_to_decimal.py  test_tpconv.py
tpconv/: converter.py
