[tool.poetry]
name = "tpconv"
version = "0.1.0"
description = "Check percentage of training plan completion for a period"
authors = ["Gianluca Rossi <gr.gianlucarossi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytype = "^2019.12"
pytest = "^5.3"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
